tests/baselines/reference/untypedFunctionCallsWithTypeParameters1.js
//// [tests/cases/compiler/untypedFunctionCallsWithTypeParameters1.ts] ////

//// [untypedFunctionCallsWithTypeParameters1.ts]
// none of these function calls should be allowed
var x = function () { return; };
var r1 = x<number>();
var y: any = x;
var r2 = y<string>();

declare var c: Function;
var r3 = c<number>(); // should be an error

class C implements Function {
    prototype = null;
    length = 1;
    arguments = null;
    caller = () => { };
}

declare var c2: C;
var r4 = c2<number>(); // should be an error

class C2 extends Function { } // error
declare var c3: C2;
var r5 = c3<number>(); // error

interface I {
    (number): number;
}
declare var z: I;
var r6 = z<string>(1); // error

interface callable2<T> {
    (a: T): T;
}

declare var c4: callable2<number>;
c4<number>(1);
interface callable3<T> {
    (a: T): T;
}

declare var c5: callable3<number>;
c5<string>(1); // error



//// [untypedFunctionCallsWithTypeParameters1.js]
"use strict";
// none of these function calls should be allowed
var x = function () { return; };
var r1 = x();
var y = x;
var r2 = y();
var r3 = c(); // should be an error
class C {
    constructor() {
        this.prototype = null;
        this.length = 1;
        this.arguments = null;
        this.caller = () => { };
    }
}
var r4 = c2(); // should be an error
class C2 extends Function {
} // error
var r5 = c3(); // error
var r6 = z(1); // error
c4(1);
c5(1); // error
